fixed overflow issues with the particles

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@ body {
     height: 100%;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 body {
     background-color: rgb(8, 8, 9);
     background-size: cover;
@@ -14,7 +18,6 @@ body {
 
 .background {
     background: linear-gradient(180deg, rgba(8, 8, 9, 0.5) 0%, rgb(8, 8, 9) 50%), url("img/bg.png");
-    overflow: hidden;
 }
 
 .top-bar {
